Fix: spacing of paragraphs in portfolio projects card

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -258,15 +258,14 @@ nav {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   padding-top: 2em;
+  row-gap: 1em;
 }
 
 .portfolio-item {
   border: 1px solid lightgray;
   background-color: var(--secondary-font-color);
-}
-
-.portfolio-item img {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .portfolio-item-img-container {
@@ -274,6 +273,7 @@ nav {
   opacity: 1;
   transition: opacity 2s;
   -webkit-transition: opacity 2s;
+  height: 50%;
 }
 
 .portfolio-item-img-container:hover {
@@ -281,6 +281,7 @@ nav {
 }
 
 .portfolio-item-img-container img {
+  width: 100%;
   opacity: 1;
   transition: opacity 0.5s;
 }
@@ -297,7 +298,7 @@ nav {
   margin-right: auto;
   left: 0;
   right: 0;
-  top: 35%;
+  top: 70%;
   text-align: center;
   color: var(--primary-bg-color);
   font-size: 5rem;
@@ -309,6 +310,10 @@ nav {
 
 .project-info {
   padding: 0.5em;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  height: 50%;
 }
 
 .project-name {
@@ -318,6 +323,7 @@ nav {
 
 .project-github-link {
   font-weight: 700;
+  margin-top: auto;
 }
 
 .project-github-link:hover {
